Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yadahan/cardcom",
+    "name": "yadahan/laravel-cardcom",
     "description": "Laravel Cardcom",
     "license": "MIT",
     "authors": [
