--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.0",
         "guzzlehttp/guzzle": "~6.0",
         "illuminate/support": "~5.4"
     },
@@ -27,5 +27,7 @@
                 "Cardcom": "Yadahan\\Cardcom\\Facades\\Cardcom"
             }
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
