--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,18 @@
         "guzzlehttp/guzzle": "~6.0",
         "illuminate/support": "~5.4"
     },
+    "require-dev": {
+        "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "~6.0"
+    },
     "autoload": {
         "psr-4": {
             "Yadahan\\Cardcom\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Yadahan\\Cardcom\\Tests\\": "tests/"
         }
     },
     "extra": {
