--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "illuminate/support": "~5.4"
     },
     "require-dev": {
+        "orchestra/testbench": "~3.4",
         "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~6.0"
     },
