--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,10 @@
     ],
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "~6.0",
-        "illuminate/support": "~5.4"
+        "guzzlehttp/guzzle": "~7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.4",
-        "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~9.0"
     },
     "autoload": {
         "psr-4": {
